# largebot

./: .gitignore  .gitmodules  CCT_TestData_BotDef.yaml  CCT_TestData_BotTemplate.yaml  Dockerfile  LargeBot_Finance_Templates_scenarios.yaml  LargeBot_MediaCable_Bot.yaml  README.md  pyproject.toml  requirements.txt  socool  welo365
largebot/: DraftYaml_Finance_definition.yaml  DraftYaml_MediaCable_definition.yaml  MASTER_SLOT_TYPES_en_US.csv  PostponeTemplates.yaml  PostponedBot.yaml  __init__.py  __main__.py  acs.py  assistant.py  blah.py  bot_definition.py  bot_template.py  cli.py  config.py  convoprep.py  deliveryprep.py  esprep.py  files.py  largebotter.py  logger.py  main.py  newyaml.py  o365_token.txt  pd.py  qctool.py  slotfaker.py  teams.py  template_scratch.py  translate.py  twoslotsoneutt.py  utterance.py  utterances.py  xltoapp.py
largebot/botter/: DNU_scenarios.yaml  LargeBot_Finance_Update_scenarios.yaml  LargeBot_MediaCable_Update_scenarios.yaml  amazon.py  botter  delivery.py  master.csv  providers.py  script.py  socool  update_templates.py
largebot/botter/scenarios/: LargeBot_Finance_scenarios_batch01.yaml  LargeBot_Finance_scenarios_batch02.yaml  LargeBot_Finance_scenarios_batch03.yaml  LargeBot_Finance_scenarios_batch04.yaml  LargeBot_Finance_scenarios_batch05.yaml  LargeBot_Finance_scenarios_batch06.yaml  LargeBot_Finance_scenarios_batch07.yaml  LargeBot_Finance_scenarios_batch08.yaml  LargeBot_Finance_scenarios_batch09.yaml  LargeBot_Finance_scenarios_batch10.yaml  LargeBot_Finance_scenarios_batch11.yaml  LargeBot_Finance_scenarios_batch12.yaml  LargeBot_Finance_scenarios_batch13.yaml  LargeBot_Finance_scenarios_batch14.yaml  LargeBot_Finance_scenarios_batch15.yaml  LargeBot_Finance_scenarios_batch16.yaml  LargeBot_Finance_scenarios_batch17.yaml  LargeBot_Finance_scenarios_batch18.yaml  LargeBot_Finance_scenarios_batch19.yaml  LargeBot_Finance_scenarios_batch20.yaml  LargeBot_Finance_scenarios_batch21.yaml  LargeBot_Finance_scenarios_batch22.yaml  LargeBot_Finance_scenarios_batch23.yaml  LargeBot_Finance_scenarios_batch24.yaml  LargeBot_Finance_scenarios_batch25.yaml  LargeBot_Finance_scenarios_batch26.yaml  LargeBot_Finance_scenarios_batch27.yaml  LargeBot_Finance_scenarios_batch28.yaml  LargeBot_Finance_scenarios_batch29.yaml  LargeBot_Finance_scenarios_batch30.yaml  LargeBot_Finance_scenarios_batch31.yaml  LargeBot_MediaCable_scenarios_batch02.yaml  LargeBot_MediaCable_scenarios_batch06.yaml  (+10 more)
largebot/gui/: windows.py
largebot/webapp/: script_turns.py
largebot/webapp/html/: index.html
largebot/yaml_gen/: Finance_Custom.csv  FollowupBot.yaml  FollowupScenarios.yaml  LargeBot_Finance_scenarios.yaml  LargeBot_MediaCable.yaml  LargeBot_MediaCable_CombinedBotDef.yaml  LargeBot_MediaCable_Scenarios_scenarios.yaml  LargeBot_MediaCable_Update_New_scenarios.yaml  LargeBot_MediaCable_Update_scenarios.yaml  LargeBot_MediaCable_definition.yaml  LargeBot_MediaCable_definition_inout.yaml  LargeBot_MediaCable_scenarios copy.yaml  LargeBot_MediaCable_scenarios.yaml  LargeBot_MediaCable_scenarios_1_of_2.yaml  LargeBot_MediaCable_scenarios_2_of_2.yaml  MASTER_SLOTTERANCES.csv  MASTER_SLOT_METHODS.csv  MediaCable_Custom.csv  lex_yaml_gen.py  yamlate.py
static/: index.html  main.css  resource.html
static/css/: layout.css  main.css
static/old/: main.html  old_resource.html
templates/: sample_bot_definition.xlsx
tests/: test_largebot.py
welo365/: __init__.py  account.py  drive.py  excel.py  sharepoint.py
(+88 files in other folders)
