[tool.poetry]
name = "largebot"
version = "4.2.0"
description = ""
authors = ["welocalize <aie-devel@welocalize.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
O365 = "^2.0.11"
selenium = "^3.141.0"
pathlib = "^1.0.1"
pandas = "^1.1.4"
xlrd = "^1.2.0"
openpyxl = "^3.0.5"
typer = "^0.3.2"
pymsteams = "^0.1.14"
arrow = "^0.17.0"
num2words = "^0.5.10"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
gunicorn = "^20.0.4"
urllib3 = "^1.26.2"
tabulate = "^0.8.7"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [[tool.poetry.source]]
# name = "default"
# url = "https://pypi.python.org/simple/"
# default = true
# 
# [[tool.poetry.source]]
# name = "rypy"
# url = "https://pypi.rypy.tk/simple/"
# secondary = true

[tool.poetry.scripts]
largebot = "largebot.cli:app"
